# akita-ai

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
akita/: __main__.py
akita/api/: base_ai_provider.py  config.toml  google_genai_provider.py  openai_client.py  openai_provider.py  provider_factory.py
akita/api/utils/: config_loader.py  utils.py
akita/assistant/: app.py  app_terminal.py  chainlit.md  config.py  database.py  document_loader.py  rag_chain.py  run.py  text_splitter.py
akita/assistant/.chainlit/: config.toml
akita/cli/: cli.py  command_factory.py  config.py  main_parser.py  plugin_manager.py
akita/cli/commands/: add_command.py  assistant_command.py  base_command.py  describe_command.py  init_command.py  readme_command.py  remove_command.py  review_command.py  show_command.py
akita/plugins/: base_plugin.py
akita/plugins/git/: git_plugin.py
akita/plugins/git/commands/: git_add_command.py  git_commit_command.py
akita/plugins/git/utils/: utils.py
akita/plugins/template/: template_plugin.py
akita/services/text_generation/: file_handler.py  models.json  prompt_builder.py  settings.py  text_generator.py  utils.py
akita/utils/: console.py  file_handler.py
docs/: Akita_Assistant_README.md  Commands_Documentation.md
docs/contributors/: Adding_A_New_Plugin_README.md  README.md
tests/: test_command_factory.py  test_pluging_manager.py
tests/api/: test_openai_client.py
tests/commands/: test_commands.py
tests/services/text_generation/: test_prompt_builder.py  test_text_generator.py
(+9 files in other folders)
